actualizacion logo y demas

--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
     <nav class="navbar navbar-expand-lg bg-white sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img class="img-logo" src="./assets/images/mujerendireccion-png.png" alt="">
+                <div class="logo-init">
+                    <img class="img-logo" src="./assets/images/mujerendireccion-png.png" alt="">
+                    <h5>Mujeres en Dirección</h5>
+                </div>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs- target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -287,19 +290,21 @@
                     <h5 class=" mb-0 text-white mt-3">Talleres Bíblicos.</h5>
                     <h5 class=" mb-0 text-white mt-3">Asesorías Espirituales.</h5>
                     <h5 class=" mb-0 text-white mt-3">Eventos Cristianos.</h5>
-                    <h5 class=" mb-0 text-white mt-3">Conciertos.</h5>
+                    <h5 class=" mb-0 text-white mt-3">Campañas Evangelistas</h5>
                 </div>
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="250">
                     <h1 class="text-white display-4">Alma</h1>
                     <h5 class=" mb-0 text-white mt-3">formación y capacitación Profesional.</h5>
                     <h5 class=" mb-0 text-white mt-3">Como dirigir su hogar.</h5>
                     <h5 class=" mb-0 text-white mt-3">Como manejar sus finanzas.</h5>
+                    <h5 class=" mb-0 text-white mt-3">Sanidad Interior</h5>
                 </div>
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
                     <h1 class="text-white display-4">Cuerpo</h1>
                     <h5 class=" mb-0 text-white mt-3">Consultorías de Salud.</h5>
                     <h5 class=" mb-0 text-white mt-3">Orientación nutricional.</h5>
                     <h5 class=" mb-0 text-white mt-3">Orientación deportiva ejercicios.</h5>
+                    <h5 class=" mb-0 text-white mt-3">Diseño interior para ambientes saludables y tranquilos</h5>
                 </div>
 
             </div>
@@ -392,16 +397,18 @@
                         <h4>Fechas de nuestras actividades.</h4> <br> <br>
                         <!-- <div class="line"></div> -->
                         <div class="col-lg-6">
-                            <h6>Jueves: 05:00 - 06:00 am</h6> <hr> 
+                            <h6>Jueves:</h6> <h6>5:00 am - 6:am</h6>
+                            <hr>
                             <h5>Intercesion y Oracion</h5>
                             <p>Somos ungrupo de Mujeres apasionadas por la Oración</p>
                         </div>
                         <div class="col-lg-6">
-                            <h6>Viernes: 05:00 - 06:00 am</h6> <hr>
-                            <h5>Conferencias y Talleres</h5>
+                            <h6>Viernes:</h6> <h6>7:00 pm a 8:30 pm</h6>
+                            <hr>
+                            <h5>Estudios, talleres y conferencias</h5>
                             <p>Aprenderemos a ser mejores personas y a tener una mejor relacion con Dios.</p>
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
@@ -418,7 +425,7 @@
                         <a href="./assets/images/about2.png" data-fancybox="gallery" class="iconbox"><i
                                 class="ri-search-2-line"> </i></a>
                     </div>
-                    
+
                     <div class="portfolio-item team-member image-zoom mt-4">
                         <div class="image-zoom-wrapper">
                             <img src="./assets/images/actividad2.jpg" alt="">
@@ -506,7 +513,7 @@
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                             </div>
-                            <p>Amazing theme ipsum dolor sit amet consectetur adipisicing elit. Assumenda eum 
+                            <p>Amazing theme ipsum dolor sit amet consectetur adipisicing elit. Assumenda eum
                                 animi
                                 rerum ipsam impedit dicta voluptatem.</p>
                         </div>
@@ -529,7 +536,7 @@
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                             </div>
-                            <p>Amazing theme ipsum dolor sit amet consectetur adipisicing elit. Assumenda eum 
+                            <p>Amazing theme ipsum dolor sit amet consectetur adipisicing elit. Assumenda eum
                                 animi
                                 rerum ipsam impedit dicta voluptatem.</p>
                         </div>
@@ -552,7 +559,7 @@
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                             </div>
-                            <p>Amazing theme ipsum dolor sit amet consectetur adipisicing elit. Assumenda eum 
+                            <p>Amazing theme ipsum dolor sit amet consectetur adipisicing elit. Assumenda eum
                                 animi
                                 rerum ipsam impedit dicta voluptatem.</p>
                         </div>
