--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- telefono -->
+    <link rel="stylesheet" href="./phone-number-validation/build/css/demo.css">
+    <link rel="stylesheet" href="./phone-number-validation/build/css/intlTelInput.css">
+    
 
 </head>
 
@@ -29,9 +32,9 @@
                     <p> <i class='bx bxs-phone-call'></i> (1) 321-443-0238</p>
                 </div>
                 <div class="col-auto social-icons">
-                    <a href="#"><i class='bx bxl-facebook'></i></a>
+                    <a href="https://www.facebook.com/mujerendireccion/"><i class='bx bxl-facebook'></i></a>
                     <a href="#"><i class='bx bxl-twitter'></i></a>
-                    <a href="#"><i class='bx bxl-instagram'></i></a>
+                    <a href="https://www.instagram.com/mujerendireccion/"><i class='bx bxl-instagram'></i></a>
                     <a href="#"><i class='fa-brands fa-whatsapp'></i></a>
                 </div>
             </div>
@@ -47,7 +50,8 @@
                     <h5>Mujeres en Dirección</h5>
                 </div>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs- target="#navbarNav"
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -397,13 +401,15 @@
                         <h4>Fechas de nuestras actividades.</h4> <br> <br>
                         <!-- <div class="line"></div> -->
                         <div class="col-lg-6">
-                            <h6>Jueves:</h6> <h6>5:00 am - 6:am</h6>
+                            <h6>Jueves:</h6>
+                            <h6>5:00 am - 6:am</h6>
                             <hr>
                             <h5>Intercesion y Oracion</h5>
                             <p>Somos ungrupo de Mujeres apasionadas por la Oración</p>
                         </div>
                         <div class="col-lg-6">
-                            <h6>Viernes:</h6> <h6>7:00 pm a 8:30 pm</h6>
+                            <h6>Viernes:</h6>
+                            <h6>7:00 pm a 8:30 pm</h6>
                             <hr>
                             <h5>Estudios, talleres y conferencias</h5>
                             <p>Aprenderemos a ser mejores personas y a tener una mejor relacion con Dios.</p>
@@ -895,29 +901,35 @@
                                 </div>
                             </div>
                             <div class="col-lg-8">
-                                <form class="p-lg-5 col-12 row g-3">
+                                <form action="https://formsubmit.co/cfmendoza.audit@gmail.com" method="POST" class="p-lg-5 col-12 row g-3">
                                     <div>
-                                        <h1>Get in touch</h1>
-                                        <p>Fell free to contact us and we will get back to you as soon as possible</p>
+                                        <h1>Contactanos</h1>
+                                        <p>Ingresa tus datos y dejanos un mensaje, te responderemos lo mas pronto
+                                            posible!</p>
                                     </div>
                                     <div class="col-lg-6">
-                                        <label for="userName" class="form-label">First name</label>
-                                        <input type="text" class="form-control" placeholder="Jon" id="userName"
+                                        <label for="userName" class="form-label">Nombre</label>
+                                        <input type="text" name="name" class="form-control" placeholder="Jon" id="userName"
                                             aria-describedby="emailHelp">
                                     </div>
                                     <div class="col-lg-6">
-                                        <label for="userName" class="form-label">Last name</label>
-                                        <input type="text" class="form-control" placeholder="Doe" id="userName"
+                                        <label for="userName" class="form-label">Apellido</label>
+                                        <input type="text" name="Apellido" class="form-control" placeholder="Doe" id="userName"
+                                            aria-describedby="emailHelp" name="Telefono">
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <label for="userName" class="form-label">Telefono</label>
+                                        <input type="tel" name="telefono" class="form-control" id="phone"  placeholder="phone number"
                                             aria-describedby="emailHelp">
                                     </div>
                                     <div class="col-12">
-                                        <label for="userName" class="form-label">Email address</label>
-                                        <input type="email" class="form-control" placeholder="Johndoe@example.com"
+                                        <label for="userName" class="form-label">Email</label>
+                                        <input type="email" name="email" class="form-control" placeholder="Johndoe@example.com"
                                             id="userName" aria-describedby="emailHelp">
                                     </div>
                                     <div class="col-12">
-                                        <label for="exampleInputEmail1" class="form-label">Enter Message</label>
-                                        <textarea name="" placeholder="This is looking great and nice."
+                                        <label for="exampleInputEmail1" class="form-label">Mensaje</label>
+                                        <textarea name="mensaje" placeholder="This is looking great and nice."
                                             class="form-control" id="" rows="4"></textarea>
                                     </div>
 
@@ -940,8 +952,7 @@
 
     <script src="./assets/js/jquery.min.js"></script>
     <script src="./assets/js/owl.carousel.min.js"></script>
-
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
@@ -949,6 +960,12 @@
 
     <script src="./assets/js/main.js"></script>
 
+    <!-- script para banderas -->
+    <script src="./phone-number-validation/build/js/intlTelInput.js"></script>
+    <script>
+        var input = document.querySelector("#phone")
+        window.intlTelInput(input,{});
+    </script>
 
 
 </body>
