--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
                 </div>
             </div>
 
-            <div class="row g-4 text-center">
+            <div class="row g-4 justify-content-center text-center">
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
                     <div class="service theme-shadow p-lg-6 p-4">
                         <div class="iconbox">
-                            <i class="ri-home-heart-fill"></i>
+                            <i class="ri-pen-nib-fill"></i>
                         </div>
                         <h5 class="mt-4 mb-3">Crecimiento Espiritual</h5>
                         <p>descubre con nosotras el camino para tener un crecimiento espiritual optimo, Para que
@@ -267,7 +267,7 @@
                             enriquecedora y significativa</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
+                <div class="col-md-6 col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
                     <div class="service theme-shadow p-lg-6 p-4">
                         <div class="iconbox">
                             <i class="ri-vip-crown-fill"></i>
@@ -288,7 +288,7 @@
     <!-- COUNTER -->
     <section id="counter" class="section-padding">
         <div class="container text-center">
-            <div class="row g-4">
+            <div class="row g-4 justify-content-center">
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
                     <h1 class="text-white display-4">Espiritu</h1>
                     <h5 class=" mb-0 text-white mt-3">Talleres Bíblicos.</h5>
@@ -303,7 +303,7 @@
                     <h5 class=" mb-0 text-white mt-3">Como manejar sus finanzas.</h5>
                     <h5 class=" mb-0 text-white mt-3">Sanidad Interior</h5>
                 </div>
-                <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
+                <div class="col-md-6 col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
                     <h1 class="text-white display-4">Cuerpo</h1>
                     <h5 class=" mb-0 text-white mt-3">Consultorías de Salud.</h5>
                     <h5 class=" mb-0 text-white mt-3">Orientación nutricional.</h5>
@@ -905,7 +905,9 @@
                                     class="p-lg-5 col-12 row g-3">
                                     <div>
                                         <h1>Contactanos</h1>
-                                        <p>Mujer en Dirección te ayuda a conectarte con cientos de personas que adoran a Dios y desean ser felices cumpliendo su voluntad, conéctate con nosotras y comienza una nueva vida hoy!</p>
+                                        <p>Mujer en Dirección te ayuda a conectarte con cientos de personas que adoran a
+                                            Dios y desean ser felices cumpliendo su voluntad, conéctate con nosotras y
+                                            comienza una nueva vida hoy!</p>
                                     </div>
                                     <div class="col-lg-6">
                                         <label for="userName" class="form-label">Nombre</label>
