--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
             <div class="container">
                 <div class="row g-4 justify-content-between">
                     <div class="col-auto">
-                        <p class="mb-0">© Copyright MD. All Rights Reserved</p>
+                        <p class="mb-0">© Copyright. All Rights Reserved</p>
                     </div>
                 </div>
             </div>
