--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Mujer en Direccion</title>
+    <!-- primary meta tag -->
+    <meta name="title" content="Mujer en Dirección">
+  <meta name="description"
+    content="anhelamos vivir para cumplir el propósito que Dios trazó para nuestras vidas">
+
+    <!-- google search -->
+    <meta name="google-site-verification" content="-KPIq8P7yumgPEY-uwsMbx-f9FbE4Xm3oSEmKz8UexM" />
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css">
@@ -524,7 +534,7 @@
                                 rerum ipsam impedit dicta voluptatem.</p>
                         </div>
                         <div class="review-person mt-4 d-flex align-items-center">
-                            <img class="rounded-circle" src="./assets/images/avatar-2.jpg" alt="">
+                            <!-- <img class="rounded-circle" src="./assets/images/avatar-2.jpg" alt=""> -->
                             <div class="ms-3">
                                 <h5>Dianne Russell</h5>
                                 <small>UX Architect</small>
@@ -547,7 +557,7 @@
                                 rerum ipsam impedit dicta voluptatem.</p>
                         </div>
                         <div class="review-person mt-4 d-flex align-items-center">
-                            <img class="rounded-circle" src="./assets/images/avatar-2.jpg" alt="">
+                            <!-- <img class="rounded-circle" src="./assets/images/avatar-2.jpg" alt=""> -->
                             <div class="ms-3">
                                 <h5>Dianne Russell</h5>
                                 <small>UX Architect</small>
@@ -570,7 +580,7 @@
                                 rerum ipsam impedit dicta voluptatem.</p>
                         </div>
                         <div class="review-person mt-4 d-flex align-items-center">
-                            <img class="rounded-circle" src="./assets/images/avatar-2.jpg" alt="">
+                            <!-- <img class="rounded-circle" src="./assets/images/avatar-2.jpg" alt=""> -->
                             <div class="ms-3">
                                 <h5>Dianne Russell</h5>
                                 <small>UX Architect</small>
@@ -782,10 +792,9 @@
             <div class="row">
                 <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
                     <div class="section-title">
-                        <h1 class="display-4 fw-semibold">Recent News & Articles</h1>
+                        <h1 class="display-4 fw-semibold">Blogs y Articulos</h1>
                         <div class="line"></div>
-                        <p>We love to craft digital experiances for brands rather than crap and more lorem ipsums and do
-                            crazy skills</p>
+                        <p>Conoce más acerca de tus temas de interés</p>
                     </div>
                 </div>
             </div>
@@ -793,9 +802,9 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/blog-post-1.jpg" alt="">
+                            <img src="./assets/images/about2.png" alt="">
                         </div>
-                        <h5 class="mt-4">Web Design 2022</h5>
+                        <h5 class="mt-4">E verdadero Amor</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sequi quos magni!</p>
                         <a href="#">Read More</a>
                     </div>
@@ -803,19 +812,19 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/blog-post-2.jpg" alt="">
+                            <img src="./assets/images/about2.png" alt="">
                         </div>
-                        <h5 class="mt-4">Web Design 2022</h5>
+                        <h5 class="mt-4">La vida del Cristiano</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sequi quos magni!</p>
                         <a href="#">Read More</a>
                     </div>
                 </div>
-                <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
+                <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/blog-post-3.jpg" alt="">
+                            <img src="./assets/images/about2.png" alt="">
                         </div>
-                        <h5 class="mt-4">Web Design 2022</h5>
+                        <h5 class="mt-4">Morir al Yo</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sequi quos magni!</p>
                         <a href="#">Read More</a>
                     </div>
