--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <!-- google search -->
     <meta name="google-site-verification" content="-KPIq8P7yumgPEY-uwsMbx-f9FbE4Xm3oSEmKz8UexM" />
 
+    <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mujerendireccion.com/">
+  <meta property="og:title" content="Mujer en Dirección">
+  <meta property="og:description"
+    content="Un llamado poderoso para mujeres en busca de su propósito.">
+  <meta property="og:image" content="">
+  <!-- favicon -->
+  <link rel="icon" href="./assets/images/favicon.png" type="image/png" sizes="TAMAÑO-FAV">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css">
