--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </li> -->
                 </ul>
                 <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-brand ms- 
-                lg-3">Contactanos</a>
+                lg-3">Contáctanos</a>
             </div>
         </div>
     </nav>
@@ -310,7 +310,7 @@
         <div class="container text-center">
             <div class="row g-4 justify-content-center">
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
-                    <h1 class="text-white display-4">Espiritu</h1>
+                    <h1 class="text-white display-4">Espíritu</h1>
                     <h5 class=" mb-0 text-white mt-3">Talleres Bíblicos.</h5>
                     <h5 class=" mb-0 text-white mt-3">Asesorías Espirituales.</h5>
                     <h5 class=" mb-0 text-white mt-3">Eventos Cristianos.</h5>
@@ -431,7 +431,7 @@
                             <h6>Viernes:</h6>
                             <h6>5:00 am a 6:00 am</h6>
                             <hr>
-                            <h5>Intercesion y Oracion</h5>
+                            <h5>Intercesion y Oración</h5>
                             <p>Somos un grupo de Mujeres apasionadas por la Oración</p>
                         </div>
 
@@ -445,7 +445,7 @@
                             <img src="./assets/images/about2.png" alt="">
                         </div>
                         <div class="activ-member-content">
-                            <h5 class="text-white">Intercesion</h5>
+                            <h5 class="text-white">Intercesión</h5>
                             <p class="mb-0 text-white">Virtual / presencial</p>
                         </div>
                         <a href="./assets/images/about2.png" data-fancybox="gallery" class="iconbox"><i
@@ -923,7 +923,7 @@
                                 <form action="https://formsubmit.co/tmolina112@gmail.com" method="POST"
                                     class="p-lg-5 col-12 row g-3">
                                     <div>
-                                        <h1>Contactanos</h1>
+                                        <h1>Contáctanos</h1>
                                         <p>Mujer en Dirección te ayuda a conectarte con cientos de personas que adoran a
                                             Dios y desean ser felices cumpliendo su voluntad, conéctate con nosotras y
                                             comienza una nueva vida hoy!</p>
